# simple_fastapi

./: README.md  alembic.ini  main.py  pyproject.toml
app/: crud.py  database.py  main.py
app/api/v1/endpoints/: items.py
app/core/: config.py
app/db/: session.py
app/models/: item.py
app/schemas/: item.py
